# quariadne

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  mkdocs.yml  mypy.ini  pyproject.toml
ariadne/: circuit.py  converters.py
docs/: conf.py  index.md  index.rst  modules.rst  quariadne.rst
notebook/: LP.ipynb  MILP reconstruction.ipynb  MILP.ipynb  Testing.ipynb
quariadne/: README.md  circuit.py  computational_graph.py  converters.py  milp_router.py  qiskit_passes.py
src/: circuit.py  converters.py
text/usi_inf_thesis_prop/: Makefile  USIlogo.ps  USIlogo.sty  layoutsetup.tex  rules.tex  thesis.tex
