[project]
name = "quariadne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "networkx>=3.5",
    "pylatexenc>=2.10",
    "qiskit>=2.0.1",
    "qiskit-ibm-runtime>=0.40.1",
    "ruff>=0.11.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pylint>=3.3.7",
    "types-networkx>=3.5.0.20250531",
]
