[project]
name = "quariadne"
version = "1.0.0"
description = "Exact solvers of the qubit routing problem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "networkx>=3.5",
    "pydot>=4.0.1",
    "pylatexenc>=2.10",
    "qiskit>=2.0.1",
    "qiskit-ibm-runtime>=0.40.1",
    "ruff>=0.11.12",
]

[project.entry-points."qiskit.transpiler.layout"]
"quariadne_milp" = "quariadne.qiskit_passes:QuariadneMilpLayoutPlugin"

[project.entry-points."qiskit.transpiler.routing"]
"quariadne_milp" = "quariadne.qiskit_passes:QuariadneMilpRoutingPlugin"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pylint>=3.3.7",
    "scipy-stubs>=1.16.1.0",
    "types-networkx>=3.5.0.20250531",
]
